@@ -18,6 +18,7 @@ git-annex (4.20130406) UNRELEASED; urgency=low
     VERSION_FROM_CHANGELOG.
   * webapp: Added animations.
   * assistant: Stop any transfers the assistant initiated on shutdown.
+  * assistant: Added sequence numbers to XMPP git push packets. (Not yet used.)
 
  -- Joey Hess <joeyh@debian.org>  Sat, 06 Apr 2013 15:24:15 -0400
 
